--- a/docker-compose-sonarqube.yml
+++ b/docker-compose-sonarqube.yml
@@ -10,7 +10,7 @@ services:
     networks:
       - sonarnet
     environment:
-      - sonar.jdbc.url=jdbc:postgresql://db:5432/sonar
+      - sonar.jdbc.url=jdbc:postgresql://db:5432/sonar6
       - sonar.jdbc.username=sonar
       - sonar.jdbc.password=sonar
     volumes:
